--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,39 +143,29 @@ nav div{
 .item > div > *{
     margin: 8px 0px;
 }
-#heart{
+
+#favDiv{
+    width: 100%;
     position: absolute;
-    right: 30px;
-    top: 10px;
+    margin-top: -200px;
+    z-index: 2;
+    background-color: #f7f7f7;
+    display: none;
+    padding-top: 100px;
 }
-.heart{
+#favElem{
+    max-width: 80%;
+    margin: 0px auto;
+    background:#e4e4e4;
+    padding: 10px;
+    box-shadow: 0 7px 17px 0 #0000000f;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px;
     position: relative;
-    width: 0px;
-    height: 0px;
 }
-.heart::before,
-.heart::after{
-    position: absolute;
-    content: "";
-    left: 10px;
-    top: 0;
-    width: 10px;
-    height: 16px;
-    background:rgb(169, 169, 169);
-    border-radius:50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-}
-.heart::after{
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-#heart:hover > .heart::after{
-    background: linear-gradient(-90deg, #ffc157, #c17a01);
-}
-#heart:hover > .heart::before{
-    background: linear-gradient(-90deg, #ffc157, #c17a01);
+#favElem > div{
+    height: 350px;
 }
 #fullDiv{
     width: 100%;
@@ -189,7 +179,7 @@ nav div{
 #boxDiv{
     width: 80%;
     margin: 0px auto;
-    background:#d1d0d0;
+    background:#e4e4e4;
     min-height: 400px;
     padding: 20px;
     display: block;
@@ -211,7 +201,6 @@ nav div{
 .perfumeDiv *{
     margin: 7px 0px;
 }
-.perfumeDiv{}
 .perfumeDiv>img{
     width: 80px;
     height: 80px;
@@ -304,4 +293,110 @@ nav div{
     align-items:center;
     justify-content: space-around;
     background-color:rgb(175, 175, 175);
+}
+#perfumeDiv{
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+    height: 80vh;
+    display: none;
+    border: 0.2px solid gray;
+    padding: 25px;
+    background-color: #fff;
+    border-radius:15px
+}
+#perfume1{
+    width:50%;
+    padding: 20px;
+    position: relative;
+    margin-right: 15px;
+}
+#perfume1 > img{
+    width: 100%;
+}
+#perfume2{
+    width: 50%;
+}
+#perfume2 > *{
+    margin: 20px;
+}
+#perfume2 > h3 {
+    font-size: 25px;
+}
+#perfume2 > h5 {
+    font-size: 14px;
+    color:#5d5d5d93;
+}
+#perfume2>h6{
+    font-size: 22px;
+}
+#perfume2>p{
+    font-size: 17px;
+}
+#perfumeMenu{
+    margin: 50px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+    color: white;
+    background-color:#4c4c4c;
+    border-radius: 10px
+}
+#perfumeMenu > span{
+    background-color:#cc8b1b;
+    padding: 15px;
+    font-size: 18px;
+    border-radius: 10px 0px 0px 10px 
+}
+#perfumeMenu > img{
+    width: 30px;
+    height: 30px;
+    border-radius: 0px 10px 10px 0px;
+    padding: 10px;
+    border: 0.3px solid transparent;
+    cursor: pointer;
+}
+#perfumeMenu > p{
+    font-size: 22px;
+}
+#perfumeMenu > img:hover{
+    background: linear-gradient(90deg, white,#fce4bc,#ffe0aa, #ffcf7b 50%, #c17a01);
+    border: 0.3px solid #c17a01;
+}
+
+#heart{
+    position: absolute;
+    right: 30px;
+    top: 10px;
+    cursor: pointer;
+}
+.heart{
+    position: relative;
+    width: 0px;
+    height: 0px;
+}
+.heart::before,
+.heart::after{
+    position: absolute;
+    content: "";
+    left: 10px;
+    top: 0;
+    width: 10px;
+    height: 16px;
+    background-color: var(--boxAfterBackColor,rgb(169, 169, 169));
+    border-radius:50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+.heart::after{
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+#heart:hover > .heart::after{
+    background: linear-gradient(-90deg, #ffc157, #c17a01);
+}
+#heart:hover > .heart::before{
+    background: linear-gradient(-90deg, #ffc157, #c17a01);
 }
